2013-01-19    <JIM@LS-RED>

	* CPU/version.h: 
	Version 9.1.9

	* helloworld.s [https://sourceforge.net/p/spimsimulator/feature-requests/8/]:
	Added hello world example

2013-01-06    <JIM@LS-RED>

	* spimview.cpp, console.cpp [http://sourceforge.net/p/spimsimulator/feature-requests/9/]:
	Use fixed width font for spim output to line up colums properly

2012-12-16    <JIM@LS-RED>

	* QtSpim/QtSpim.pro [sourceforge #37: https://sourceforge.net/u/smeenai/]:
	Fix flex output file argument specification.
	Include optional defines for using Win move and del commands.

2012-12-09    <Jim@X64PC>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.8

	* CPU/scanner.l [Tom Murphy wolfmurphy@gmail.com]:
	Overwrote first digit in \ooo escape sequence in string.

	* CPU/inst.c (i_type_inst) [Tom Murphy wolfmurphy@gmail.com]:
	Crashed at teqi instruction.

2012-10-21    <Jim@X64PC>

	* QtSpim/main.cpp (parseCommandLine): 
	Allow multiple input files on the command line.

	* QtSpim/console.cpp (WriteOutput):
	Activate console window on input or output to raise it and give it focus.

2012-10-13    <Jim@X64PC>

	* CPU/sym-tbl.c (resolve_a_label_sub):
	Error message indicates bare machine to explain why memory address
	is too large.

2012-02-25    <Jim@LS-RED>

	* QtSpim/menu.cpp (file_LoadFile):
	Allow .a extension for assembly file.

2012-02-12    <Jim@X64PC>

	* CPU/version.h:
	Version 9.1.7

2012-02-11    <Jim@LS-RED>

	* QtSpim/spimview.h:
	Include version.h to catch dependence in menu.c on version number.

2012-02-04    <Jim@LS-RED>

	* CPU/version.:
	Version 9.1.6

	* QtSpim/regwin.cpp (formatInt) [Jeff Gitlin <jeff.gitlin@gmail.com>]:
	Returned sign-extended 64bit formatted values for negative numbers.

2012-01-07    <Jim@LS-RED>

	* CPU/data.c (increment_data_pc), inst.c, tt.core.s [Artur Golisz <artur_waw@ymail.com>]:
	Did not grow data segments properly when allocating memory with
	the .space command.

2012-01-02    <Jim@X64PC>

	* CPU/spim-utils.c (write_startup_message):