@@ -1,3 +1,8 @@
+2013-03-23    <JIM@LS-RED>
+
+	* CPU/inst.c (i_type_inst_full_word) [https://sourceforge.net/p/spimsimulator/feature-requests/11/]:
+	LW/SW of 0x8000..0xffff generated incorrect code.
+
 2013-01-19    <JIM@LS-RED>
 
 	* CPU/version.h: 
